[gd_scene load_steps=4 format=3 uid="uid://brpili3h0hmmc"]

[ext_resource type="Script" path="res://scenes/menus/main.gd" id="1_c08ku"]
[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_tk0ar"]
[ext_resource type="Script" path="res://scenes/menus/gui.gd" id="3_lbomv"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c08ku")

[node name="MainMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_tk0ar")

[node name="Main" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 462.5
offset_top = 253.5
offset_right = 649.5
offset_bottom = 354.5
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSelect" type="MenuButton" parent="MainMenu/Main"]
layout_mode = 2
text = "Level Select"
alignment = 0

[node name="Multiplayer" type="MenuButton" parent="MainMenu/Main"]
layout_mode = 2
text = "Multiplayer"
alignment = 0
item_count = 2
popup/item_0/text = "Host"
popup/item_1/text = "Join"
popup/item_1/id = 1

[node name="Host" type="Tree" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 344.0
offset_top = 237.5
offset_right = 768.0
offset_bottom = 370.5
grow_horizontal = 2
grow_vertical = 2

[node name="LevelSelect" type="OptionButton" parent="MainMenu/Host"]
layout_mode = 0
offset_left = 36.0
offset_top = 19.5
offset_right = 210.0
offset_bottom = 40.5

[node name="PlayerCount" type="Label" parent="MainMenu/Host"]
layout_mode = 0
offset_left = 369.0
offset_top = 12.5
offset_right = 409.0
offset_bottom = 35.5

[node name="ServerInformation" type="Label" parent="MainMenu/Host"]
offset_left = 37.0
offset_top = 76.0
offset_right = 216.0
offset_bottom = 99.0

[node name="Host" type="Button" parent="MainMenu/Host"]
layout_mode = 0
offset_left = 317.0
offset_top = 97.5
offset_right = 414.0
offset_bottom = 128.5
text = "Host"

[node name="Back" type="Button" parent="MainMenu/Host"]
offset_left = 8.0
offset_top = 97.5
offset_right = 105.0
offset_bottom = 128.5
text = "Back"

[node name="Name" type="LineEdit" parent="MainMenu/Host"]
layout_mode = 0
offset_left = 258.0
offset_top = 16.0
offset_right = 403.0
offset_bottom = 47.0
placeholder_text = "Name"

[node name="Join" type="Tree" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 344.0
offset_top = 237.5
offset_right = 768.0
offset_bottom = 370.5
grow_horizontal = 2
grow_vertical = 2

[node name="ServerIP" type="LineEdit" parent="MainMenu/Join"]
layout_mode = 0
offset_left = 38.0
offset_top = 20.0
offset_right = 213.0
offset_bottom = 51.0
placeholder_text = "localhost"

[node name="PlayerCount" type="Label" parent="MainMenu/Join"]
layout_mode = 0
offset_left = 369.0
offset_top = 12.5
offset_right = 409.0
offset_bottom = 35.5

[node name="ServerInformation" type="Label" parent="MainMenu/Join"]
offset_left = 37.0
offset_top = 76.0
offset_right = 216.0
offset_bottom = 99.0

[node name="Join" type="Button" parent="MainMenu/Join"]
layout_mode = 0
offset_left = 317.0
offset_top = 97.5
offset_right = 414.0
offset_bottom = 128.5
text = "Join"

[node name="Back" type="Button" parent="MainMenu/Join"]
offset_left = 8.0
offset_top = 97.5
offset_right = 105.0
offset_bottom = 128.5
text = "Back"

[node name="Name" type="LineEdit" parent="MainMenu/Join"]
offset_left = 258.0
offset_top = 16.0
offset_right = 403.0
offset_bottom = 47.0
placeholder_text = "Name"

[node name="GUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_lbomv")

[node name="Network" type="Tree" parent="GUI"]
offset_right = 134.0
offset_bottom = 70.0

[node name="NetworkDisplay" type="Label" parent="GUI/Network"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="UniquePeerID" type="Label" parent="GUI/Network"]
layout_mode = 0
offset_left = 1.0
offset_top = 19.0
offset_right = 59.0
offset_bottom = 42.0

[node name="ExternalIP" type="Label" parent="GUI/Network"]
layout_mode = 0
offset_top = 43.0
offset_right = 67.0
offset_bottom = 66.0

[connection signal="item_selected" from="MainMenu/Host/LevelSelect" to="MainMenu" method="_on_host_level_select_item_selected"]
[connection signal="pressed" from="MainMenu/Host/Host" to="MainMenu" method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/Host/Back" to="MainMenu" method="_on_host_back_pressed"]
[connection signal="pressed" from="MainMenu/Join/Join" to="MainMenu" method="_on_join_pressed"]
[connection signal="pressed" from="MainMenu/Join/Back" to="MainMenu" method="_on_host_back_pressed"]
